# mobile-deep-learning

./: CMakeLists.txt  README.md  build.sh
cmake/: FindPTHREAD.cmake
include/commons/: commons.h
